# PL-ULPGC

./: .gitignore  CMakeLists.txt  README.md  xlang.sh
docs/: specification.txt
src/: ASTDeclaration.h  ASTImplementation.cpp  lexer.cpp  lexer.l  parser.cpp  parser.hpp  parser.y
tests/: test1.ll  test1.x  test2.ll  test2.x  test3.ll  test3.x  test4.ll  test4.x  test5.ll  test5.x  test6.ll  test6.x  test7.ll  test7.x
